[gd_scene load_steps=6 format=2]

[ext_resource path="res://dynamic_objects/scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.062, 0.062, 0.062 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 0.984314, 0, 0.584314 )

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )
top_radius = 0.05
bottom_radius = 0.05
height = 0.005

[node name="Inventory" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
monitoring = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="ActiveInventorySlot" type="Spatial" parent="."]

[node name="ShowItem" type="Spatial" parent="ActiveInventorySlot"]
transform = Transform( -5.46392e-09, 0, 0.125, 0, 0.125, 0, -0.125, 0, -5.46392e-09, 0, 0.1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="ActiveInventorySlot"]
mesh = SubResource( 3 )
material/0 = null

[node name="Label_Slot" parent="ActiveInventorySlot/MeshInstance" instance=ExtResource( 2 )]
transform = Transform( -0.5, 4.37114e-08, 1.91069e-15, 0, -2.18557e-08, 0.5, 4.37114e-08, 0.5, 2.18557e-08, 0, 0, -0.08 )
text = "1"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 0 )
transparent = true
